grafana-dev/base/grafana-dev-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: grafana-tls-dev
  labels:
    app: multicluster-observability-grafana-dev
  name: grafana-dev
  namespace: open-cluster-management-observability
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: oauth-proxy
    port: 9443
    protocol: TCP
    targetPort: 9443
  selector:
    app: multicluster-observability-grafana-dev
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
